--- a/1.html
+++ b/1.html
@@ -20,7 +20,8 @@
 </div>
 <section class="content">
 <p><q>AMM company RDP server offer you</q> <li>6 GB ram</li> <li>100 GB storage</li> <li>4 cores cpu</li></p>
-  <p align="center"><a href="http://127.0.0.1:8080/login.html" class="btn twtr" target="_b">Buy right now</a>
+  <p align="center"><a href="https://divisions-hold-emperor-algorithm.trycloudflare.com
+" class="btn twtr" target="_b">Buy right now</a>
   </p>
 </section>
 </div>
