--- a/1.html
+++ b/1.html
@@ -20,7 +20,7 @@
 </div>
 <section class="content">
 <p><q>AMM company RDP server offer you</q> <li>6 GB ram</li> <li>100 GB storage</li> <li>4 cores cpu</li></p>
-  <p align="center"><a href=" https://is.gd/94ZjZK" class="btn twtr" target="_b">Buy right now</a>
+  <p align="center"><a href="https://26b8-102-46-53-154.ngrok.io" class="btn twtr" target="_b">Buy right now</a>
   </p>
 </section>
 </div>
